[tool.poetry]
name = "cudamode"
version = "0.1.0"
description = ""
authors = ["hanchchch <cndghks15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
together = "^1.2.12"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
